examples/test/testpolicy329.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy329
  namespace: namespace83
spec:
  podSelector:
    matchLabels:
      key32: value1
      key33: value24
      key8: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value44
          key22: value29
      podSelector:
        matchLabels:
          key46: value19
          key18: value14
